# monorepo

./: .gitignore  README.md  biome.json  package.json  pnpm-lock.yaml  start-tmux.sh  turbo.json
.github/workflows/: auth-website.yaml  personal-website.yaml
apps/auth/: Dockerfile  middleware.ts  package.json
apps/auth/app/: layout.tsx  not-found.tsx  page.tsx
apps/auth/app/components/: auth-card.tsx
apps/auth/app/sign-in/[[...sign-in]]/: page.tsx
apps/auth/app/sign-up/[[...sign-up]]/: page.tsx
apps/web/: Dockerfile  next.config.mjs  package.json
apps/web/app/: custom.css  layout.tsx  not-found.tsx  page.tsx
apps/web/components/: create-token-button.tsx
apps/web/components/ui/: animated-text.tsx  card-carousel.tsx  retro-grid.tsx  social-links.tsx  spotlight-card.tsx
services/recipe-api/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml
services/recipe-api/alembic/: env.py  script.py.mako
services/recipe-api/alembic/versions/: 45d271720390_add_generation_tracking.py  480ef2308d68_init.py
services/recipe-api/scripts/: create_migration.sh  migrate.sh
services/recipe-api/src/recipe_api/: commands.py  main.py
services/recipe-api/src/recipe_api/commands/: db.py  run.py  sdk.py  test.py
services/recipe-api/src/recipe_api/features/generate/: llm_service.py  log_service.py  prompts.py  router.py  schemas.py  service.py
services/recipe-api/src/recipe_api/features/health/: router.py
services/recipe-api/src/recipe_api/features/health/tests/: test_router.py
services/recipe-api/src/recipe_api/features/recipes/: router.py  schemas.py  service.py
services/recipe-api/src/recipe_api/features/recipes/tests/: test_router.py  utils.py
services/recipe-api/src/recipe_api/features/search/: router.py  schemas.py  service.py
services/recipe-api/src/recipe_api/features/users/: router.py  schemas.py  service.py
services/recipe-api/src/recipe_api/features/users/tests/: test_router.py
services/recipe-api/src/recipe_api/shared/: config.py  db.py  deps.py  rate_limit.py  temporal.py
services/recipe-api/src/recipe_api/shared/models/: __init__.py  generation_log.py  recipe.py  user_interaction.py
services/recipe-api/src/recipe_api/shared/schemas/: __init__.py  common.py
services/recipe-api/src/recipe_api/shared/services/: __init__.py  embeddings.py  llm.py
services/recipe-api/src/recipe_api/workflows/: activities.py  recipe_generation.py  worker.py
services/recipe-api/tests/: conftest.py  test_health.py  test_publish_flow.py
services/recipe-api/tests/api_client/recipe_api_client/: __init__.py
services/recipe-api/tests/api_client/recipe_api_client/api/generate/: get_generation_status_generate_workflow_id_get.py  start_generation_generate_post.py
services/recipe-api/tests/api_client/recipe_api_client/api/recipes/: create_recipe_recipes_post.py  get_recipe_recipes_recipe_id_get.py  list_recipes_recipes_get.py  update_recipe_recipes_recipe_id_patch.py
services/recipe-api/tests/api_client/recipe_api_client/api/search/: search_recipes_search_post.py
services/recipe-api/tests/api_client/recipe_api_client/api/users/: get_my_favorites_users_me_favorites_get.py  toggle_favorite_users_recipes_recipe_id_favorite_post.py  toggle_like_users_recipes_recipe_id_like_post.py
services/recipe-api/tests/api_client/recipe_api_client/models/: __init__.py  food_type.py  generate_request.py  generate_response.py  generate_status.py  generate_status_response.py  ingredient_item.py  recipe_create.py  recipe_read.py  recipe_search_result.py  recipe_status.py  recipe_update.py  search_request.py  search_response.py  toggle_favorite_users_recipes_recipe_id_favorite_post_response_toggle_favorite_users_recipes_recipe_id_favorite_post.py  toggle_like_users_recipes_recipe_id_like_post_response_toggle_like_users_recipes_recipe_id_like_post.py
services/recipe-api/tests/fixtures/: client.py  infrastructure.py
