[project]
name = "recipe-api"
version = "0.1.0"
description = "Recipe API service with RAG search and LLM generation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.5",
    "sentence-transformers>=3.3.1",
    "openai>=1.54.0",
    "clerk-backend-api>=1.8.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "alembic>=1.14.0",
    "temporalio>=1.7.0",
    "instructor>=1.4.0",
    "alembic-postgresql-enum>=1.8.0",
]

[project.scripts]
dev-worker = "recipe_api.commands:dev_worker"
dev-server = "recipe_api.commands:dev_server"


[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
exclude = [
    "alembic/**"
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.lint.isort]
known-first-party = ["recipe_api"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
