[project]
name = "recipe-api"
version = "0.1.0"
description = "Recipe API service with RAG search and LLM generation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "sqlmodel>=0.0.22",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.5",
    "sentence-transformers>=3.3.1",
    "openai>=1.54.0",
    "clerk-backend-api>=1.8.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "alembic>=1.14.0",
    "temporalio>=1.7.0",
    "instructor>=1.4.0",
    "alembic-postgresql-enum>=1.8.0",
    "fastapi-limiter>=0.1.6",
    "redis>=7.1.0",
]

[project.scripts]
# uv run dev-server
dev-server = "recipe_api.commands.run:dev_server"
# uv run dev-worker
dev-worker = "recipe_api.commands.run:dev_worker"
# uv run test <path/specfic/folder>
# uv run test src/recipe_api/features/health
test = "recipe_api.commands.test:all_tests"
# uv run test-e2e <path/specfic/folder>
test-e2e = "recipe_api.commands.test:e2e_tests"
# uv run test-unit <path/specfic/folder>
test-unit = "recipe_api.commands.test:unit_tests"
# uv run sdk-generate
sdk-generate = "recipe_api.commands.sdk:generate"
# uv run db-generate <message>
db-generate = "recipe_api.commands.db:generate"
# uv run db-migrate
db-migrate = "recipe_api.commands.db:migrate"


[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "watchdog>=6.0.0",
    "testcontainers[postgres,redis]>=4.13.3",
    "types-redis>=4.6.0.20241004",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests/api_client"]
exclude = [
    "alembic/**"
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.lint.isort]
known-first-party = ["recipe_api", "recipe_api_client"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "tests/api_client"

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
asyncio_mode = "auto"
pythonpath = ["src", "tests/api_client"]
markers = [
    "e2e: End-to-end tests",
]

[dependency-groups]
dev = [
    "openapi-python-client>=0.28.0",
    "types-python-dateutil>=2.9.0.20251115",
]
